force-app/main/default/objects/Change_Log__c/Change_Log__c.object-meta.xml
<CustomObject>
    <description>This object will capture all important change logs and configuration changes made within the Salesforce org.</description>
    <label>Change Log</label>
    <nameField>
        <displayFormat>CL-{00000}</displayFormat>
        <label>Change Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>