force-app/main/default/objects/Change_Log__c/fields/Actor_Context_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Actor_Context_Indicator__c</fullName>
    <description>Visual actor context derived from delegated access, effective actor and deployment-user fields.</description>
    <formula>IF(Is_Delegated_Access__c, IF(ISBLANK(Effective_Actor__c), &quot;⚠️ Login-As Actor Unresolved&quot;, &quot;🔑 Login-As Access&quot;), IF(ISBLANK(Effective_Actor__c), &quot;⚠️ Actor Unresolved&quot;, IF(Deployment_User_Log__c, &quot;🚀 Deployment User&quot;, &quot;👤 Internal User&quot;)))</formula>
    <inlineHelpText>Shows whether the effective actor was delegated, a deployment user or unresolved.</inlineHelpText>
    <label>Actor Context</label>
    <type>Text</type>
</CustomField>