force-app/main/default/objects/Change_Log__c/fields/Attention_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Attention_Indicator__c</fullName>
    <description>Visual attention indicator derived from stored compliance, severity and review fields.</description>
    <formula>IF(ISBLANK(Compliance_Reason_Code__c), IF(Non_Compliant__c, &quot;⚠️ Processing Incomplete&quot;, &quot;⚪ Not Evaluated&quot;), IF(Reviewed__c, &quot;✅ Review Completed&quot;, IF(AND(Non_Compliant__c, TEXT(Severity__c) = &quot;CRITICAL&quot;), &quot;🚨 Immediate Action&quot;, IF(AND(Non_Compliant__c, TEXT(Severity__c) = &quot;HIGH&quot;), &quot;⚠️ Priority Review&quot;, IF(Non_Compliant__c, &quot;🔎 Review Required&quot;, IF(TEXT(Severity__c) = &quot;CRITICAL&quot;, &quot;👁 Critical — Compliant&quot;, &quot;✅ No Action Required&quot;))))))</formula>
    <inlineHelpText>Shows the highest-priority action currently required for this change.</inlineHelpText>
    <label>Attention</label>
    <type>Text</type>
</CustomField>