force-app/main/default/objects/Change_Log__c/fields/Change_Operation__c.field-meta.xml
<CustomField>
    <fullName>Change_Operation__c</fullName>
    <label>Change Operation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>