force-app/main/default/objects/Change_Log__c/fields/Change_Timing_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Change_Timing_Indicator__c</fullName>
    <description>Displays whether the source change occurred during configured unusual hours and outside a deployment window.</description>
    <formula>IF(
    AND(
        Unusual_Hours__c,
        Compliance_Reason_Code__c = &quot;NO_DEPLOYMENT_WINDOW&quot;
    ),
    &quot;🌙 Odd hours • Outside deployment window&quot;,
    IF(
        Unusual_Hours__c,
        &quot;🌙 Odd hours&quot;,
        &quot;☀️ Standard hours&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Change Timing</label>
    <type>Text</type>
</CustomField>