force-app/main/default/objects/Change_Log__c/fields/Changed_By_User__c.field-meta.xml
<CustomField>
    <fullName>Changed_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Salesforce user who made the change.</description>
    <label>Changed By User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>