force-app/main/default/objects/Change_Log__c/fields/Classification_Rule_Key__c.field-meta.xml
<CustomField>
    <fullName>Classification_Rule_Key__c</fullName>
    <label>Classification Rule Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>