force-app/main/default/objects/Change_Log__c/fields/Compliance_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Indicator__c</fullName>
    <description>Visual compliance state derived from the stored reason code and non-compliant flag.</description>
    <formula>IF(ISBLANK(Compliance_Reason_Code__c), IF(Non_Compliant__c, &quot;⚠️ Compliance Incomplete&quot;, &quot;⚪ Not Evaluated&quot;), IF(Non_Compliant__c, &quot;❌ Non-compliant&quot;, &quot;✅ Compliant&quot;))</formula>
    <inlineHelpText>Distinguishes evaluated compliance from records that have not been evaluated.</inlineHelpText>
    <label>Compliance Indicator</label>
    <type>Text</type>
</CustomField>