force-app/main/default/objects/Change_Log__c/fields/Compliance_Reason__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Reason__c</fullName>
    <description>Complete human-readable deployment compliance explanation.</description>
    <label>Compliance Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>