force-app/main/default/objects/Change_Log__c/fields/Compliance_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Reason_Code__c</fullName>
    <label>Compliance Reason Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>