force-app/main/default/objects/Change_Log__c/fields/Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Name__c</fullName>
    <description>Component name extracted only by the winning catalogue rule.</description>
    <label>Component Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>