force-app/main/default/objects/Change_Log__c/fields/Delegate_Username__c.field-meta.xml
<CustomField>
    <fullName>Delegate_Username__c</fullName>
    <description>Original SetupAuditTrail DelegateUser value.</description>
    <label>Delegate Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>