force-app/main/default/objects/Change_Log__c/fields/Deployment_Decision_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Decision_Indicator__c</fullName>
    <description>Visual deployment-window decision mapped from the stable compliance reason code.</description>
    <formula>CASE(Compliance_Reason_Code__c, &quot;APPROVED_WINDOW_NOMINATED_USER&quot;, &quot;🗓️ Approved Window&quot;, &quot;WINDOW_APPROVAL_NOT_REQUIRED&quot;, &quot;🗓️ Approval Not Required&quot;, &quot;SANDBOX_WINDOW_SKIP&quot;, &quot;🧪 Sandbox Window Skip&quot;, &quot;NO_DEPLOYMENT_WINDOW&quot;, &quot;🚫 Outside Window&quot;, &quot;WINDOW_NOT_APPROVED&quot;, &quot;⏳ Window Not Approved&quot;, &quot;USER_NOT_NOMINATED&quot;, &quot;🚷 User Not Nominated&quot;, &quot;INVALID_WINDOW_CONFIGURATION&quot;, &quot;⚠️ Invalid Window&quot;, &quot;&quot;, &quot;⚪ Not Evaluated&quot;, &quot;⚠️ Other Decision&quot;)</formula>
    <inlineHelpText>Shows the deployment-window outcome without interpreting readable reason text.</inlineHelpText>
    <label>Deployment Decision</label>
    <type>Text</type>
</CustomField>