force-app/main/default/objects/Change_Log__c/fields/Deployment_User_Log__c.field-meta.xml
<CustomField>
    <fullName>Deployment_User_Log__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether the user is a deployment user.</description>
    <label>Deployment User Log?</label>
    <type>Checkbox</type>
</CustomField>