force-app/main/default/objects/Change_Log__c/fields/Effective_Actor__c.field-meta.xml
<CustomField>
    <fullName>Effective_Actor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Internal user who effectively performed the setup change.</description>
    <label>Effective Actor</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Effective Actor Change Logs</relationshipLabel>
    <relationshipName>Effective_Actor_Change_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>