force-app/main/default/objects/Change_Log__c/fields/Forwarded_For_IP__c.field-meta.xml
<CustomField>
    <fullName>Forwarded_For_IP__c</fullName>
    <description>Forwarded IP recorded by Salesforce for the selected login when the connection passed through a proxy or intermediary. This value may be blank.</description>
    <inlineHelpText>Forwarded IP recorded by Salesforce for the selected login when the connection passed through a proxy or intermediary. This value may be blank.</inlineHelpText>
    <label>Forwarded For IP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>