force-app/main/default/objects/Change_Log__c/fields/Is_Delegated_Access__c.field-meta.xml
<CustomField>
    <fullName>Is_Delegated_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when Setup Audit Trail identifies a delegated actor.</description>
    <label>Delegated Access</label>
    <type>Checkbox</type>
</CustomField>