force-app/main/default/objects/Change_Log__c/fields/Justification__c.field-meta.xml
<CustomField>
    <fullName>Justification__c</fullName>
    <description>Filled by responsible user when resolving the case</description>
    <label>Justification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>