force-app/main/default/objects/Change_Log__c/fields/Lifecycle_Status__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Status__c</fullName>
    <description>Lifecycle state for review of a detected change.</description>
    <label>Lifecycle Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Detected</fullName>
                <default>true</default>
                <label>Detected</label>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>