force-app/main/default/objects/Change_Log__c/fields/Matched_Component__c.field-meta.xml
<CustomField>
    <fullName>Matched_Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The tracked component record that matched.</description>
    <inlineHelpText>The tracked component record that matched.</inlineHelpText>
    <label>Matched Component</label>
    <referenceTo>Tracked_Component__c</referenceTo>
    <relationshipLabel>Change Logs</relationshipLabel>
    <relationshipName>Change_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>