force-app/main/default/objects/Change_Log__c/fields/Matched_Deployment_Window__c.field-meta.xml
<CustomField>
    <fullName>Matched_Deployment_Window__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Window active at the time of change.</description>
    <label>Matched Deployment Window</label>
    <referenceTo>Deployment_Window__c</referenceTo>
    <relationshipLabel>Change Logs</relationshipLabel>
    <relationshipName>Change_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>