force-app/main/default/objects/Change_Log__c/fields/Metadata_Type__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Type__c</fullName>
    <label>Metadata or Governance Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>