force-app/main/default/objects/Change_Log__c/fields/Non_Compliant_Reason__c.field-meta.xml
<CustomField>
    <fullName>Non_Compliant_Reason__c</fullName>
    <description>This field will be used to capture the reason of the non-compliant records</description>
    <label>Non-Compliant Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>