force-app/main/default/objects/Change_Log__c/fields/Review_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Review_Outcome__c</fullName>
    <description>Decision made when a Change Log review is closed.</description>
    <label>Review Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Authorised</fullName>
            </value>
            <value>
                <fullName>Unauthorised</fullName>
            </value>
            <value>
                <fullName>Not Reviewed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>