force-app/main/default/objects/Change_Log__c/fields/Review_Status_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Review_Status_Indicator__c</fullName>
    <description>Visual review status derived from stored review, case, compliance and severity fields.</description>
    <formula>IF(Reviewed__c, &quot;✅ Reviewed&quot;, IF(NOT(ISBLANK(Related_Case__c)), &quot;🎫 Case Raised&quot;, IF(ISBLANK(Compliance_Reason_Code__c), &quot;⚪ Not Ready for Review&quot;, IF(Non_Compliant__c, &quot;🔎 Review Required&quot;, IF(TEXT(Severity__c) = &quot;CRITICAL&quot;, &quot;👁 Review Recommended&quot;, &quot;— No Review Required&quot;)))))</formula>
    <inlineHelpText>Shows whether review is complete, required, recommended or linked to a case.</inlineHelpText>
    <label>Review Status</label>
    <type>Text</type>
</CustomField>