force-app/main/default/objects/Change_Log__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up the user to determine who reviewed the Audit Trail.</description>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>