force-app/main/default/objects/Change_Log__c/fields/Run_Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Run_Correlation_Id__c</fullName>
    <description>Stable identifier for the collection run that created this record.</description>
    <label>Run Correlation ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>