force-app/main/default/objects/Change_Log__c/fields/Score_Weight__c.field-meta.xml
<CustomField>
    <fullName>Score_Weight__c</fullName>
    <description>How much does this action type influence the org score</description>
    <label>Score Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>