force-app/main/default/objects/Change_Log__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>This value will be in sync with the Severity field of custom metadata type Audit_Trail_Severity__mdt</description>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INFO</fullName>
            </value>
            <value>
                <fullName>LOW</fullName>
            </value>
            <value>
                <fullName>MEDIUM</fullName>
            </value>
            <value>
                <fullName>HIGH</fullName>
            </value>
            <value>
                <fullName>CRITICAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>