force-app/main/default/objects/Change_Log__c/fields/Severity_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Severity_Indicator__c</fullName>
    <description>Visual representation of the stored severity classification.</description>
    <formula>CASE(TEXT(Severity__c), &quot;CRITICAL&quot;, &quot;🔴 Critical&quot;, &quot;HIGH&quot;, &quot;🟠 High&quot;, &quot;MEDIUM&quot;, &quot;🟡 Medium&quot;, &quot;LOW&quot;, &quot;🔵 Low&quot;, &quot;&quot;, &quot;⚪ Unclassified&quot;, &quot;⚠️ Unknown Severity&quot;)</formula>
    <inlineHelpText>Displays the stored severity with a consistent visual marker.</inlineHelpText>
    <label>Severity Indicator</label>
    <type>Text</type>
</CustomField>