force-app/main/default/objects/Change_Log__c/fields/Source_IP__c.field-meta.xml
<CustomField>
    <fullName>Source_IP__c</fullName>
    <description>Public source IP recorded by Salesforce for the effective actor’s selected recent successful login.</description>
    <inlineHelpText>Public source IP recorded by Salesforce for the effective actor’s selected recent successful login.</inlineHelpText>
    <label>Source IP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>