force-app/main/default/objects/Change_Log__c/fields/Unusual_Hours__c.field-meta.xml
<CustomField>
    <fullName>Unusual_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the source setup change occurred during configured unusual hours in the organization’s timezone.</description>
    <label>Unusual Hours</label>
    <type>Checkbox</type>
</CustomField>