force-app/main/default/objects/Change_Log__c/fields/User_Location_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>User_Location_Postal_Code__c</fullName>
    <description>Approximate location associated with the effective actor’s recent login IP, as returned by Salesforce LoginGeo. It may represent an ISP, VPN, proxy, mobile network or internet gateway location rather than the user’s physical location.</description>
    <inlineHelpText>Approximate location associated with the effective actor’s recent login IP, as returned by Salesforce LoginGeo. It may represent an ISP, VPN, proxy, mobile network or internet gateway location rather than the user’s physical location.</inlineHelpText>
    <label>Approximate IP Postal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>