force-app/main/default/objects/Change_Log__c/recordTypes/Review_Lifecycle.recordType-meta.xml
<RecordType>
    <fullName>Review_Lifecycle</fullName>
    <active>true</active>
    <label>Review Lifecycle</label>
</RecordType>