force-app/main/default/objects/Change_Log__c/validationRules/Closed_Review_Requires_Outcome.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Review_Requires_Outcome</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Non_Compliant__c, ISPICKVAL(Lifecycle_Status__c, &quot;Closed&quot;), ISBLANK(TEXT(Review_Outcome__c)))</errorConditionFormula>
    <errorMessage>A closed non-compliant change must have a Review Outcome.</errorMessage>
</ValidationRule>