force-app/main/default/objects/Change_Log__c/validationRules/Compliant_Changes_Are_Authorised.validationRule-meta.xml
<ValidationRule>
    <fullName>Compliant_Changes_Are_Authorised</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(Non_Compliant__c), OR(NOT(ISPICKVAL(Lifecycle_Status__c, &quot;Closed&quot;)), NOT(ISPICKVAL(Review_Outcome__c, &quot;Authorised&quot;))))</errorConditionFormula>
    <errorMessage>A compliant change must be Closed and Authorised.</errorMessage>
</ValidationRule>