force-app/main/default/objects/Change_Log__c/validationRules/Critical_High_Require_Decision.validationRule-meta.xml
<ValidationRule>
    <fullName>Critical_High_Require_Decision</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Non_Compliant__c, ISPICKVAL(Lifecycle_Status__c, &quot;Closed&quot;), ISPICKVAL(Review_Outcome__c, &quot;Not Reviewed&quot;), OR(ISPICKVAL(Severity__c, &quot;CRITICAL&quot;), ISPICKVAL(Severity__c, &quot;HIGH&quot;)))</errorConditionFormula>
    <errorMessage>Critical and High non-compliant changes require an Authorised or Unauthorised decision.</errorMessage>
</ValidationRule>