force-app/main/default/objects/Change_Log__c/validationRules/Open_Review_Clears_Outcome.validationRule-meta.xml
<ValidationRule>
    <fullName>Open_Review_Clears_Outcome</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Lifecycle_Status__c, &quot;Review&quot;), NOT(ISBLANK(TEXT(Review_Outcome__c))))</errorConditionFormula>
    <errorMessage>A change in Review cannot retain a previous Review Outcome.</errorMessage>
</ValidationRule>