force-app/main/default/objects/Change_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Attention_Indicator__c</columns>
    <columns>Severity_Indicator__c</columns>
    <columns>Compliance_Indicator__c</columns>
    <columns>Deployment_Decision_Indicator__c</columns>
    <columns>Actor_Context_Indicator__c</columns>
    <columns>Review_Status_Indicator__c</columns>
    <columns>Change_Summary__c</columns>
    <columns>Effective_Actor__c</columns>
    <columns>Log_Created_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>