force-app/main/default/objects/Change_Log__c/listViews/All_Open_Reviews.listView-meta.xml
<ListView>
    <fullName>All_Open_Reviews</fullName>
    <columns>NAME</columns>
    <columns>Log_Created_Date__c</columns>
    <columns>Change_Summary__c</columns>
    <columns>Changed_By_User__c</columns>
    <columns>Component_Name__c</columns>
    <columns>Severity__c</columns>
    <columns>Non_Compliant__c</columns>
    <columns>Lifecycle_Status__c</columns>
    <columns>Review_Outcome__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lifecycle_Status__c</field>
        <operation>equals</operation>
        <value>Review</value>
    </filters>
    <label>All Open Reviews</label>
</ListView>