force-app/main/default/objects/Change_Log__c/listViews/Review_Recommended.listView-meta.xml
<ListView>
    <fullName>Review_Recommended</fullName>
    <booleanFilter>1 AND (2 OR 3) AND 4</booleanFilter>
    <columns>NAME</columns>
    <columns>Log_Created_Date__c</columns>
    <columns>Change_Summary__c</columns>
    <columns>Changed_By_User__c</columns>
    <columns>Component_Name__c</columns>
    <columns>Severity__c</columns>
    <columns>Non_Compliant__c</columns>
    <columns>Lifecycle_Status__c</columns>
    <columns>Review_Outcome__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Non_Compliant__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Severity__c</field>
        <operation>equals</operation>
        <value>MEDIUM</value>
    </filters>
    <filters>
        <field>Severity__c</field>
        <operation>equals</operation>
        <value>LOW</value>
    </filters>
    <filters>
        <field>Lifecycle_Status__c</field>
        <operation>equals</operation>
        <value>Review</value>
    </filters>
    <label>Review Recommended</label>
</ListView>