force-app/main/default/objects/Change_Log__c/listViews/Un_Justified_Change_Logs.listView-meta.xml
<ListView>
    <fullName>Un_Justified_Change_Logs</fullName>
    <columns>NAME</columns>
    <columns>Changed_By_User__c</columns>
    <columns>Details__c</columns>
    <columns>Justification__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Justification__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Non_Compliant__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Un-Justified Change Logs</label>
</ListView>